Estructura inicial de la cabezera

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,17 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <h1>Aqui vamos a hacer un bloh post</h1>
-    <p>Y este es el parrafo de inicio</p>
+    <div id="container">
+        <div id="cabecera">
+            cabecera
+
+        </div>
+        <div id="post">
+            <h1>Ya la cagué, asi que lo volvi a hacer</h1>
+            <p>Este parrafo es para quexplicar las increibles cosas
+                que puede hacer con las ramas
+            </p>
+        </div>
+    </div>
 </body>
 </html>
