--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,8 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            cabecera
+            Hyperblog
+            <span id="tagline">Tu blog woua</span>
 
         </div>
         <div id="post">
