Segundo intento de hacer merge

--- a/blogpost.html
+++ b/blogpost.html
@@ -18,6 +18,7 @@
             <p>Este parrafo es para quexplicar las increibles cosas
                 que puede hacer con las ramas
             </p>
+            <p>Intento numero dos para hacer merge</p>
         </div>
     </div>
 </body>
