Agregue suscripcion, cambie la cabecera y puse todo azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
     <div id="container">
         <div id="cabecera">
             Hyperblog
-            <span id="tagline">Tu blog woua</span>
+            <span id="tagline">Tu blog maestro</span>
 
         </div>
         <div id="post">
@@ -19,6 +19,7 @@
                 que puede hacer con las ramas
             </p>
             <p>Intento numero dos para hacer merge</p>
+            <p>Suscribete y dale like</p>
         </div>
     </div>
 </body>
