--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
     <div id="container">
         <div id="cabecera">
             Hyperblog
-            <span id="tagline">Mi blog de cabecera</span>
+            <span id="tagline">Mi blog de cabecera pero actualizado desde GitHub</span>
 
         </div>
         <div id="post">
