--- a/blogpost.html
+++ b/blogpost.html
@@ -21,6 +21,9 @@
             <p>Intento numero dos para hacer merge</p>
             <p>Suscribete y dale like</p>
         </div>
+        <div id="footer">
+            Arriba Mexico 🇲🇽
+        </div>
     </div>
 </body>
 </html>
