--- a/blogpost.html
+++ b/blogpost.html
@@ -20,7 +20,7 @@
             </p>
             <p>Intento numero dos para hacer merge</p>
             <p>Suscribete y dale like</p>
-            <p>Estamos practicando los Pull Requests</p>
+            <p>Estamos pracTicando los Pull ReQuests</p>
         </div>
         <div id="footer">
             Arriba Mexico 🇲🇽
